add skill list page

--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -8,8 +8,8 @@
 </head>
 <body>
   <h1>Skills</h1>
-  <!-- Add this line -->
-  <a href="/skills">Here are my skills</a>
+  
+  <a href="/skills/new">Create new skills</a>
     <ul>
       <% skills.forEach(skills => { %>
         <li> 
