--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -7,10 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Tell Us Your Skills!</h1>
-  <form action="/skills" method="POST" autocomplete="off">
-    <input type="text" name="text">
-    <button type="submit">Save</button>
-  </form>
+  <h1>Skills</h1>
+  <h2>Skill #<%= skill._id %></h2>
+  <h3><%= skill.text %></h3>
+	<a href="/skills">Go back</a>
 </body>
 </html>
