add time to index page

--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Skills</h1>
-
+  <h1><%= time %></h1>
   <a href="/skills/new">Create new skills</a>
     <ul>
       <% skills.forEach(skills => { %>
