--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,8 @@
 </head>
 <body>
   <h1><%= title %></h1>
+  <h2> <a href="/skills">You Got Skills?</a></h2>
+  <h3> <%= time %> </h3>
+  
 </body>
 </html>
